k8s-template/service-external.yml
apiVersion: v1
kind: Service
metadata:
  name: [APP-NAME]
spec:
  selector:
    app: [APP-NAME]
  ports:
    - name: http
      protocol: TCP
      port: [APP-PORT]
      targetPort: [APP-PORT]
---
kind: Service
apiVersion: v1
metadata:
  name:  [APP-NAME]
  namespace: [EXPOSE-TO-NAMESPACE]
spec:
  type: ExternalName
  externalName: [APP-NAME].default.svc.cluster.local
