k8s-template/service.yml
apiVersion: v1
kind: Service
metadata:
  name: [APP-NAME]
spec:
  selector:
    app: [APP-NAME]
  ports:
    - name: http
      protocol: TCP
      port: [APP-PORT]
      targetPort: [APP-PORT]
